# uraeus_nmbd_cpp

./: .gitignore  LICENSE  README.md  README.rst  setup.py
demos/double_wishbone_direct_acting/: README.md  double_wishbone_direct_acting.ipynb  sym_model.py
demos/double_wishbone_pushrod/: README.md  double_wishbone_pushrod.ipynb
demos/pendulum/: README.md  pendulum.ipynb
demos/spatial_fourbar/: spatial_fourbar.ipynb
numerics/tests/temps/: temps  temps.cpp
uraeus.nmbd.cpp.egg-info/: PKG-INFO  SOURCES.txt  namespace_packages.txt  requires.txt  top_level.txt
uraeus/nmbd/cpp/codegen/: __init__.py  call_obj.pyx  cmake_template.txt  generators.py  generators_old.py  header_template.txt  printer.py  projects.py  py_obj_wrapper.hpp  setup_template.txt  simulation_cy.pxd  simulation_cy.pyx  source_template.txt
uraeus/nmbd/cpp/codegen/templates/: call_obj.pyx  cmake_template.txt  cython_cmake.txt  header_template.txt  py_obj_wrapper.hpp  simulation_cpp.txt  simulation_hpp.txt  simulation_pxd.txt  simulation_pyx.txt  source_template.txt  topology_header.txt  topology_source.txt
uraeus/nmbd/cpp/engine/: CMakeLists.txt  Config.cmake.in  Makefile  conanfile.txt  uraeusConfig.cmake
uraeus/nmbd/cpp/engine/sandbox/configuration/: CMakeLists.txt  configuration_test.cpp
uraeus/nmbd/cpp/engine/sandbox/double_wishbone/: CMakeLists.txt  double_wishbone_direct_acting.cpp  double_wishbone_direct_acting.hpp  double_wishbone_direct_acting.json  main.cpp
uraeus/nmbd/cpp/engine/sandbox/double_wishbone/cythonized_1/: Positions.csv  cy_dwb_test.cpp  cy_dwb_test.pxd  cy_dwb_test.pyx  dwb_test.cpp  dwb_test.hpp  setup.py
uraeus/nmbd/cpp/engine/sandbox/double_wishbone/cythonized_2/: Positions.csv  main.py  setup.py
uraeus/nmbd/cpp/engine/sandbox/double_wishbone/cythonized_2/cpp_src/: CMakeLists.txt  double_wishbone_direct_acting.hpp  main.cpp  simulation.cpp  simulation.hpp
uraeus/nmbd/cpp/engine/sandbox/double_wishbone/cythonized_2/cython_src/: simulation.cpp  simulation_cy.cpp  simulation_cy.pxd  simulation_cy.pyx
uraeus/nmbd/cpp/engine/sandbox/fourbar/: CMakeLists.txt  fourbar.cpp  spatial_fourbar.cpp  spatial_fourbar.hpp
uraeus/nmbd/cpp/engine/sandbox/jsonread/: CMakeLists.txt  jsonread.cpp
uraeus/nmbd/cpp/engine/sandbox/temps/: CMakeLists.txt  temps.cpp
uraeus/nmbd/cpp/engine/src/: CMakeLists.txt
uraeus/nmbd/cpp/engine/src/uraeus/: geometries.cpp  geometries.hpp
uraeus/nmbd/cpp/engine/src/uraeus/numerics/: euler_parameters.cpp  euler_parameters.hpp  geometries.cpp  geometries.hpp  helpers.cpp  helpers.hpp  spatial_algebra.cpp  spatial_algebra.hpp
uraeus/nmbd/cpp/engine/src/uraeus/solvers/: Solver_DDS.hpp  Solver_KDS.hpp  helpers.cpp  helpers.hpp  integrators.cpp  integrators.hpp  solver_dds.hpp  solvers.hpp  solvers_base.hpp  solvers_dense.hpp  sparse_assembler.cpp  sparse_assembler.hpp  utilities.cpp  utilities.hpp
uraeus/nmbd/cpp/engine/src/uraeus/systems/: Topology.cpp  Topology.hpp  config_parser.cpp  config_parser.hpp  configuration.cpp  configuration.hpp
